--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "bootstrap": "4.5.0",
+    "jwt-decode": "2.2.0",
     "node-sass": "4.14.1",
     "react": "16.12.0",
     "react-bootstrap": "1.0.1",
@@ -15,6 +16,7 @@
     "react-icons": "3.10.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.0.1",
+    "react-toastify": "6.0.6",
     "scss": "0.2.4"
   },
   "devDependencies": {
